--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "28-Stu_Mini-Project",
+  "name": "social-network-api",
   "version": "1.0.1",
   "description": "Mongoose back-end project - Main",
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "node index",
+    "start": "node server",
     "dev": "nodemon index",
     "seed": "node utils/seed",
     "heroku-postbuild": "node utils/seed.js"
