--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-MONGODB_URI='mongodb+srv://root:osupassword123@cluster0.htrnfr6.mongodb.net/socialMedia_db?retryWrites=true&w=majority'
+# MONGODB_URI='mongodb+srv://root:osupassword123@cluster0.htrnfr6.mongodb.net/socialMedia_db?retryWrites=true&w=majority'
+
+MONGODB_URI='mongodb+srv://root:osupassword@cluster0.htrnfr6.mongodb.net/socialMedia_db?retryWrites=true&w=majority'
